--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
-    <string name="app_name">InClassExamples_Fall2019</string>
-    <string name="welcome">Hello world!</string>
-    <string name="firstButton">Go to activity 2</string>
-    <string name="secondButton">Go to activity 3</string>
-    <string name="finish">Finish</string>
-    <string name="save">Save</string>
+    <string name="app_name">TestLabs</string>
+    <string name="hello_message">Hello World!</string>\
+    <string name="ButtonText">Start!</string>
+    <string name="Login">Login</string>
+    <string name="LoginName">LoginName</string>
+    <string name="Password" translatable="false">Password</string>\
+
+
+
+    <string name="inputtext2" translatable="false">Type password</string>
 </resources>
